--- a/AcquaSense React/src/pages/Consumo/ConsumoHome.css
+++ b/AcquaSense React/src/pages/Consumo/ConsumoHome.css
@@ -15,3 +15,82 @@
     background-color: #f2f2f2;
     text-align: left;
   }
+
+  .consumo-home {
+    padding: 20px;
+    text-align: center; /* Centraliza o conteúdo na página */
+    color: #333; /* Cor do texto para o modo claro */
+  }
+  
+  .consumo-table {
+    width: 50%;
+    border-collapse: collapse;
+    margin: auto;
+    margin-top: 80px;
+  }
+  
+  .consumo-table th, .consumo-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  .consumo-table th {
+    background-color: #f2f2f2;
+    text-align: left;
+    color: #333; /* Cor do texto do cabeçalho */
+  }
+  
+  .graph {
+    margin: 40px auto; /* Centraliza os gráficos na tela */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  h3 {
+    margin-bottom: 20px;
+  }
+  
+  .responsive-container {
+    width: 100%;
+    max-width: 650px; /* Limita a largura máxima dos gráficos */
+    height: auto;
+  }
+  
+  @media (max-width: 768px) {
+    .consumo-table {
+      width: 90%;
+    }
+  
+    .responsive-container {
+      max-width: 100%; /* Deixa os gráficos responsivos em telas menores */
+    }
+  }
+  
+  .progress-label {
+    fill: #333; /* Cor do texto dentro do gráfico de rosca (escuro) */
+  }
+  
+  body.dark-mode .consumo-home {
+    color: #fff; /* Cor do texto para o modo escuro */
+  }
+  
+  body.dark-mode .consumo-table {
+    border: 1px solid #444; /* Cor da borda para o modo escuro */
+  }
+  
+  body.dark-mode .consumo-table th, 
+  body.dark-mode .consumo-table td {
+    color: #fff; /* Cor do texto da tabela no modo escuro */
+    background-color: #333; /* Cor do fundo da tabela no modo escuro */
+  }
+  
+  body.dark-mode .consumo-table th {
+    background-color: #444; /* Cor do cabeçalho da tabela no modo escuro */
+  }
+  
+  body.dark-mode .progress-label {
+    fill: #fff; /* Cor do texto dentro do gráfico de rosca (branco) no modo escuro */
+  }
+  
