Finalizando Gráficos de consumo diários

--- a/AcquaSense React/src/pages/Consumo/ConsumoHome.css
+++ b/AcquaSense React/src/pages/Consumo/ConsumoHome.css
@@ -94,4 +94,8 @@
     fill: #fff; /* Cor do texto dentro do gráfico de rosca (branco) no modo escuro */
   }
   
+  .baixar-pdf{
+    padding: 5px;
+    
+  }
   
